@@ -1,6 +1,6 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.BinaryContent.BinaryContentCreateRequestDTO;
+import com.sprint.mission.discodeit.dto.BinaryContent.BinaryContentCreateRequest;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.service.BinaryContentService;
@@ -9,9 +9,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,11 +24,18 @@ public class BasicBinaryContentService implements BinaryContentService {
      * @return 생성된 BinaryContent
      */
     @Override
-    public BinaryContent create(BinaryContentCreateRequestDTO createRequestDTO) {
-        // BinaryContent 생성
-        BinaryContent binaryContent = new BinaryContent(createRequestDTO.content());
+    public BinaryContent create(BinaryContentCreateRequest createRequestDTO) {
+        String fileName = createRequestDTO.fileName();
+        byte[] bytes = createRequestDTO.bytes();
+        String contentType = createRequestDTO.contentType();
 
-        // 데이터 저장
+        BinaryContent binaryContent = BinaryContent.builder()
+                .fileName(fileName)
+                .size((long) bytes.length)
+                .contentType(contentType)
+                .bytes(bytes)
+                .build();
+
         binaryContentRepository.save(binaryContent);
         return binaryContent;
     }
@@ -38,18 +43,19 @@ public class BasicBinaryContentService implements BinaryContentService {
     /**
      * 주어진 ID 목록에 해당하는 BinaryContent 전체 조회
      *
-     * @param idSet 조회할 BinaryContent ID 목록
+     * @param ids 조회할 BinaryContent ID 목록
      * @return 조회된 BinaryContent 리스트
      */
     @Override
-    public List<BinaryContent> findAllByIdIn(Set<UUID> idSet) {
-        return binaryContentRepository.findAll().stream()
-                .filter(bc -> idSet.contains(bc.getId()))
-                .collect(Collectors.toList());
+    public List<BinaryContent> findAllByIdIn(List<UUID> ids) {
+        return ids.stream()
+                .map(id -> binaryContentRepository.findById(id)
+                        .orElseThrow(() -> new NoSuchElementException("존재하지 않는 BinaryContent입니다.")))
+                .toList();
     }
 
     /**
-     *주어진 id에 해당하는 BinaryContent 조회
+     * 주어진 id에 해당하는 BinaryContent 조회
      *
      * @param id 조회할 BinaryContent ID
      * @return 조회된 BinaryContent
@@ -58,7 +64,7 @@ public class BasicBinaryContentService implements BinaryContentService {
     @Override
     public BinaryContent find(UUID id) {
         return binaryContentRepository.findById(id)
-                .orElseThrow(()-> new NoSuchElementException("해당 ID의 BinaryContent가 존재하지 않습니다."));
+                .orElseThrow(() -> new NoSuchElementException("존재하지 않는 BinaryContent입니다."));
     }
 
     /**
@@ -68,7 +74,6 @@ public class BasicBinaryContentService implements BinaryContentService {
      */
     @Override
     public void delete(UUID id) {
-        // 삭제
         binaryContentRepository.deleteById(id);
     }
 }
